wood and color sort improvement